[package]
name = "ansinator"
version = "0.2.2"
edition = "2021"
authors = ["Dax99993"]
license = "MIT"
description = "A collection of programs to convert images to various character representation"
readme = "../../README.md"
repository = "https://github.com/dax99993/ansinator"

keywords = ["graphics", "cli", "ansi", "image", "ascii"]
categories = ["graphics", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
ansinator_ansi_image = { path = "../ansinator_ansi_image", version = "0.1.0" }
