[package]
name = "ansinator_image_window"
version = "0.1.0"
edition = "2021"
authors = ["Dax99993"]
license = "MIT"
description = "A library to split a image into windows for individual analysis"
#readme = "README.md"
repository = "https://github.com/dax99993/ansinator"

keywords = ["graphics", "image"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
