[package]
name = "ansinator_terminal_colors"
version = "0.1.0"
edition = "2021"
authors = ["Dax99993"]
license = "MIT"
description = "A Library to convert an RGB8 color to a 256-terminal color"
#readme = "README.md"
repository = "https://github.com/dax99993/ansinator"

keywords = ["graphics", "color"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
